
v1.3.1 "libere dorme":
 - Fix error "0xD8A08012" when a download was cancelled
 - Fix queue "install all" button being easy to accidentally press when you want to access the queue
 - Add Japanese (Osaka dialect)

v1.3.0 "libere dorme":
 - Fix functionality of "find all missing"
 - Fix issue where a large queue could not be installed
 - Add ability to reset settings by pressing R on startup or R in settings
 - Add text showing which game error belongs to in queue error replay
 - Add ability to download & install while in sleep mode
 - Add ability to directly install themes to the SD card
 - Add ability to sort titles
 - Add Hungarian translation
 - Add Polish translation
 - Add Japanese translation
 - Add Russian translation
 - Add Spearglish (Old English) translation
 - Add Ryukyuan translation
 - Add Latvian translation

v1.2.0 "cotidie morimur":
 - Make text wrapping not use hyphens
 - Make long texts in lists scroll horizontally
 - Fix issue where text search query data would get cut off
 - Fix "base game missing" message for system title DLC & updates
 - Fix some wrapping issues on Korean systems
 - Fix Romanian not being detected
 - Fix common occurence of the "server didn't return status 200" error
 - Add French (Canada) translation
 - Add (partial) Italian translation
 - Add Portuguese translation
 - Add Korean translation
 - Add Greek translation
 - Add searching using a title ID
 - Add searching using a legacy search query
 - Add toggles in settings menu to replace value true/false
 - Add ability to add an item to the queue from extended meta

v1.1.0 "aeraria":
 - fix issue where NAND titles wouldn't be reinstallable
 - add Romanian translation
 - add French translation

v1.0.1 "aeraria":
 - additionally to initial release:
 - hotfix arm11 after title installation

v1.0.0 "aeraria":
 - update for new hsite v3 api
 - re-add light theme & make it the default
 - add log spliting: logs get split into multiple files sorted on age